--- a/GameAssist/package.json
+++ b/GameAssist/package.json
@@ -14,7 +14,6 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^7.2.2",
-    "@angular/core": "^7.2.2",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
     "@angular/platform-browser": "^7.2.2",
@@ -28,18 +27,17 @@
     "cordova-ios": "5.0.1",
     "core-js": "^2.5.4",
     "gradle": "^1.0.9",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.29"
+    "tslib": "^1.9.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.13.8",
-    "@angular-devkit/build-angular": "~0.13.8",
+    "@angular-devkit/build-angular": "0.13.9",
     "@angular-devkit/core": "~7.3.8",
     "@angular-devkit/schematics": "~7.3.8",
     "@angular/cli": "7.3.9",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
+    "@angular/compiler": "7.2.15",
+    "@angular/compiler-cli": "7.2.15",
+    "@angular/core": "^7.2.15",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.5.1",
     "@types/jasmine": "~2.8.8",
@@ -60,9 +58,11 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "rxjs": "6.0.0",
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
-    "typescript": "~3.1.6"
+    "typescript": "3.1.6",
+    "zone.js": "0.8.29"
   },
   "description": "An Ionic project",
   "cordova": {
